--- a/eng/packages/http-client-csharp-mgmt/ci.yml
+++ b/eng/packages/http-client-csharp-mgmt/ci.yml
@@ -5,6 +5,7 @@ trigger:
   paths:
     include:
       - eng/packages/http-client-csharp
+      - eng/packages/http-client-csharp-mgmt
       - eng/scripts/typespec
 pr:
   branches:
@@ -16,6 +17,7 @@ pr:
   paths:
     include:
       - eng/packages/http-client-csharp
+      - eng/packages/http-client-csharp-mgmt
       - eng/scripts/typespec
 
 parameters:
@@ -46,7 +48,7 @@ variables:
 extends:
   template: /eng/common/pipelines/templates/archetype-typespec-emitter.yml
   parameters:
-    EmitterPackageJsonPath: eng/http-client-csharp-emitter-package.json
+    EmitterPackageJsonPath: eng/http-client-csharp-mgmt-emitter-package.json
     SparseCheckoutPaths:
       - /sdk/core/Azure.Core/src/Shared
       - /sdk/core/Azure.Core.TestFramework/src
@@ -71,4 +73,4 @@ extends:
     TestMatrix:
       All:
         TestArguments: -UnitTests -GenerationChecks -Filter .NET
-        SpectorName: "http-client-csharp"
+        SpectorName: "http-client-csharp-mgmt"
