--- a/eng/common/pipelines/templates/archetype-typespec-emitter.yml
+++ b/eng/common/pipelines/templates/archetype-typespec-emitter.yml
@@ -205,6 +205,7 @@ extends:
             displayName: Install tsp-client
 
           - pwsh: |
+              npm config get registry
               Copy-Item "$(buildArtifactsPath)/packages/.npmrc" "./.npmrc" -Force
               if (Test-Path -Path '$(buildArtifactsPath)/overrides.json') {
                 Write-Host "Using overrides.json to generate emitter-package.json"
