--- a/eng/common/pipelines/templates/archetype-typespec-emitter.yml
+++ b/eng/common/pipelines/templates/archetype-typespec-emitter.yml
@@ -205,15 +205,13 @@ extends:
             displayName: Install tsp-client
 
           - pwsh: |
-              Copy-Item "$(buildArtifactsPath)/packages/.npmrc" "./.npmrc" -Force
-              npm config get registry
-              if (Test-Path -Path '$(buildArtifactsPath)/overrides.json') {
+              if (Test-Path -Path '$(Build.ArtifactStagingDirectory)/overrides.json') {
                 Write-Host "Using overrides.json to generate emitter-package.json"
                 tsp-client generate-config-files `
                 --package-json '$(buildArtifactsPath)/lock-files/package.json' `
                 --output-dir '$(Build.SourcesDirectory)' `
                 --emitter-package-json-path '${{ parameters.EmitterPackageJsonPath }}' `
-                --overrides '$(buildArtifactsPath)/overrides.json'
+                --overrides '$(Build.ArtifactStagingDirectory)/overrides.json'
               } else {
                 tsp-client generate-config-files `
                 --package-json '$(buildArtifactsPath)/lock-files/package.json' `
