--- a/sdk/portalservices/Azure.ResourceManager.PortalServicesCopilot/src/Azure.ResourceManager.PortalServicesCopilot.csproj
+++ b/sdk/portalservices/Azure.ResourceManager.PortalServicesCopilot/src/Azure.ResourceManager.PortalServicesCopilot.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Version>1.0.0-beta.1</Version>
     <PackageId>Azure.ResourceManager.PortalServicesCopilot</PackageId>
-    <Description>Azure Resource Manager client SDK for Azure resource provider PortalServicesCopilot.</Description>
-    <PackageTags>azure;management;arm;resource manager;portalservicescopilot</PackageTags>
+    <Description>Azure Resource Manager client SDK for Azure resource provider Microsoft.PortalServices.</Description>
+    <PackageTags>azure;management;arm;resource manager;portalservices</PackageTags>
   </PropertyGroup>
 </Project>
