--- a/sdk/neonpostgres/ci.mgmt.yml
+++ b/sdk/neonpostgres/ci.mgmt.yml
@@ -1,7 +1,6 @@
 # NOTE: Please refer to https://aka.ms/azsdk/engsys/ci-yaml before editing this file.
 
 trigger: none
-
 pr:
   branches:
     include:
@@ -11,14 +10,13 @@ pr:
     - release/*
   paths:
     include:
-    - sdk/liftrneon/ci.mgmt.yml
-    - sdk/liftrneon/Azure.ResourceManager.NeonPostgres/
-
+    - sdk/neonpostgres/ci.mgmt.yml
+    - sdk/neonpostgres/Azure.ResourceManager.NeonPostgres/
 
 extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
   parameters:
-    ServiceDirectory: liftrneon
+    ServiceDirectory: neonpostgres
     LimitForPullRequest: true
     Artifacts:
     - name: Azure.ResourceManager.NeonPostgres
