Split generator pipelines and make E2E publish work (#49321)
* tsp-client debug

* backtick

* workingdirectory

* add working directory

* source

* don't install globally

* outputdir

* sources

* fix path

* Pass version

* backtick

* use eng

* print emitter version

* fix print

* remove version

* fix

* relative path

* add back version

* Temp work for multiple-emitter-prs

* create dir

* pass name

* fix version

* fix file name

* fix filename

* fix build path

* fix working directory and always pass emitter path

* Use parameter default

* npmrc

* ci

* remove packagename

* remove pn

* make lockfiles

* skip mgmt for now

* fix outputdirectory build

* copy nmrc to source dir

* fix npmrc

* print the registry

* ugh

* fix overrides

* add logging

* fix escaped $

* fix $

* log

* print overrides

* fix

* fix override path

* actually commit changes

* buildartifactspath

* more logs

* fix path

* updates

* restore

* fix

* remove lockfilespath

* fix arg

* if

* logging

* Add package path

* sync

* move inside function

* check-codegen

* Revert unintended change

* revert doc

* delete artifacts

* revert

* delete

* revert

* revert

---------

Co-authored-by: Patrick Hallisey <pahallis@microsoft.com>

--- a/eng/packages/http-client-csharp-mgmt/ci.yml
+++ b/eng/packages/http-client-csharp-mgmt/ci.yml
@@ -5,6 +5,7 @@ trigger:
   paths:
     include:
       - eng/packages/http-client-csharp
+      - eng/packages/http-client-csharp-mgmt
       - eng/scripts/typespec
 pr:
   branches:
@@ -16,6 +17,7 @@ pr:
   paths:
     include:
       - eng/packages/http-client-csharp
+      - eng/packages/http-client-csharp-mgmt
       - eng/scripts/typespec
 
 parameters:
@@ -42,8 +44,8 @@ variables:
 extends:
   template: /eng/common/pipelines/templates/archetype-typespec-emitter.yml
   parameters:
-    EmitterPackageJsonOutputPath: eng/http-client-csharp-emitter-package.json
-    EmitterPackagePath: eng/packages/http-client-csharp
+    EmitterPackageJsonPath: eng/http-client-csharp-mgmt-emitter-package.json
+    EmitterPackagePath: eng/packages/http-client-csharp-mgmt
     SparseCheckoutPaths:
       - /sdk/core/Azure.Core/src/Shared
       - /sdk/core/Azure.Core.TestFramework/src
@@ -68,4 +70,4 @@ extends:
     TestMatrix:
       All:
         TestArguments: -UnitTests -GenerationChecks -Filter .NET
-        SpectorName: "http-client-csharp"
+        SpectorName: "http-client-csharp-mgmt"
