--- a/sdk/ai/Azure.AI.Projects/tests/Azure.AI.Projects.Tests.csproj
+++ b/sdk/ai/Azure.AI.Projects/tests/Azure.AI.Projects.Tests.csproj
@@ -11,6 +11,13 @@
     <None Remove="SessionRecords\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <!-- Adjust the relative path as necessary if your .png is in "samples/Agent/" -->
+    <None Include="Samples\Agent\image_file.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
   <!-- Reference the Client Library -->
   <ItemGroup>
     <ProjectReference Include="$(AzureCoreTestFramework)" />
