--- a/eng/common/pipelines/templates/archetype-typespec-emitter.yml
+++ b/eng/common/pipelines/templates/archetype-typespec-emitter.yml
@@ -326,13 +326,11 @@ extends:
           - Generate
           variables:
             generateJobResult: $[dependencies.Generate.result]
-            emitterVersion: $[stageDependencies.Build.Build.outputs['ci_build.emitterVersion']]
           steps:
           - template: /eng/common/pipelines/templates/steps/sparse-checkout.yml
 
           - pwsh: |
               $generateJobResult = '$(generateJobResult)'
-              $emitterVersion = '$(emitterVersion)'
               $collectionUri = '$(System.CollectionUri)'
               $project = '$(System.TeamProject)'
               $definitionName = '$(Build.DefinitionName)'
@@ -360,9 +358,9 @@ extends:
                 $prTitle = "Scheduled code regeneration test"
               } else {
                 if ($preRelease) {
-                  $prTitle = "Update typespec emitter version to prerelease $emitterVersion"
+                  $prTitle = "Update typespec emitter version to prerelease build $buildNumber"
                 } else {
-                  $prTitle = "Update typespec emitter version to $emitterVersion"
+                  $prTitle = "Update typespec emitter version to build $buildNumber"
                 }
 
                 if ($generateJobResult -ne 'Succeeded') {
