--- a/eng/common/pipelines/templates/archetype-typespec-emitter.yml
+++ b/eng/common/pipelines/templates/archetype-typespec-emitter.yml
@@ -327,6 +327,7 @@ extends:
           variables:
             generateJobResult: $[dependencies.Generate.result]
             emitterVersion: $[stageDependencies.Build.Build.outputs['ci_build.emitterVersion']]
+            openAsDraft: $[ not(and(eq(variables['Build.Reason'], 'IndividualCI'), eq(variables['Build.SourceBranch'], 'refs/heads/main'))) ]
           steps:
           - template: /eng/common/pipelines/templates/steps/sparse-checkout.yml
 
@@ -386,6 +387,12 @@ extends:
               } else {
                 Write-Error "Build.Repository.Name not in the expected {Owner}/{Name} format"
               }
+              if ('$(openAsDraft)' -eq 'True') {
+                Write-Host "##vso[task.setvariable variable=PRLabels]Do Not Merge"
+              } else {
+                Write-Host "##vso[task.setvariable variable=PRLabels]"
+              }
+              
             displayName: Get PR title and body
 
           - task: PowerShell@2
@@ -402,8 +409,8 @@ extends:
                 -AuthToken '$(azuresdk-github-pat)'
                 -PRTitle '$(PullRequestTitle)'
                 -PRBody '$(PullRequestBody)'
-                -OpenAsDraft $true
-                -PRLabels 'Do Not Merge'
+                -OpenAsDraft '$(openAsDraft)'
+                -PRLabels '$(PRLabels)'
               workingDirectory: $(Build.SourcesDirectory)
 
     # Test stage
