--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -147,6 +147,12 @@
 # PRLabel: %Attestation
 /sdk/attestation/Azure.Security.Attestation                        @anilba06 @gkostal @Azure/azure-sdk-write-attestation
 
+# PRLabel: %Arize AI
+/sdk/liftrarize/Azure.ResourceManager.*/                           @aggarwalsw
+
+# ServiceLabel: %Arize AI %Mgmt
+# ServiceOwners:                                                   @aggarwalsw
+
 # ServiceLabel: %Attestation
 # ServiceOwners:                                                   @anilba06 @gkostal
 
