--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -687,6 +687,12 @@
 # PRLabel: %Mixed Reality
 /sdk/objectanchors/                                                @crtreasu @rgarcia
 
+# PRLabel: %Pinecone
+/sdk/liftrpinecone/Azure.ResourceManager.*/                        @aggarwalsw
+
+# ServiceLabel: %Pinecone %Mgmt
+# ServiceOwners:                                                   @aggarwalsw
+
 # PRLabel: %Remote Rendering
 /sdk/remoterendering/                                              @FlorianBorn71 @MichaelZp0 @ChristopherManthei
 
