--- a/.gitignore
+++ b/.gitignore
@@ -180,3 +180,5 @@ TempTypeSpecFiles/
 
 # Common toolchain intermediate files
 temp
+/sdk/hdinsight/Azure.ResourceManager.HDInsight/packages/MSTest.TestFramework.2.2.10
+*.json
