--- a/eng/common/pipelines/templates/archetype-typespec-emitter.yml
+++ b/eng/common/pipelines/templates/archetype-typespec-emitter.yml
@@ -100,7 +100,6 @@ extends:
 
         - task: PowerShell@2
           displayName: 'Run initialize script'
-          name: initialize
           inputs:
             pwsh: true
             filePath: $(Build.SourcesDirectory)/eng/scripts/typespec/Initialize-WorkingDirectory.ps1
@@ -118,6 +117,7 @@ extends:
 
         - task: PowerShell@2
           displayName: 'Run build script'
+          name: ci_build
           inputs:
             pwsh: true
             filePath: $(Build.SourcesDirectory)/eng/scripts/typespec/Build-Emitter.ps1
@@ -150,7 +150,10 @@ extends:
             artifactPath: $(Build.ArtifactStagingDirectory)
 
     # Publish stage
-    # Responsible for publishing the packages in `build_artifacts/packages`
+    # Responsible for publishing the packages in `build_artifacts/packages` and producing `emitter-package-lock.json`
+    # Produces the artifact `publish_artifacts` which contains the following:
+    #   emitter-package.json: Created using the package json from the build step.
+    #   emitter-package-lock.json: Created by calling `npm install` using `emitter-package.json`
     - ${{ if parameters.ShouldPublish }}:
       - stage: Publish
         dependsOn:
@@ -204,6 +207,36 @@ extends:
                 ServiceEndpointUrl: https://api.esrp.microsoft.com
                 MainPublisher: ESRPRELPACMANTEST
 
+          - pwsh: |
+              npm install -g @azure-tools/typespec-client-generator-cli@latest
+            displayName: Install tsp-client
+
+          - pwsh: |
+              Write-Host "Overrides location: $(buildArtifactsPath)/packages/overrides.json"
+
+              if (Test-Path -Path '$(buildArtifactsPath)/packages/overrides.json') {
+                Write-Host "Using overrides.json to generate emitter-package.json"
+                tsp-client generate-config-files `
+                --package-json '$(buildArtifactsPath)/lock-files/package.json' `
+                --output-dir '$(Build.SourcesDirectory)' `
+                --emitter-package-json-path '${{ parameters.EmitterPackageJsonOutputPath }}' `
+                --overrides '$(buildArtifactsPath)/packages/overrides.json'
+              } else {
+                Write-Host "No overrides.json found. Running tsp-client without overrides."
+                
+                tsp-client generate-config-files `
+                --package-json '$(buildArtifactsPath)/lock-files/package.json' `
+                --output-dir '$(Build.SourcesDirectory)' `
+                --emitter-package-json-path '${{ parameters.EmitterPackageJsonOutputPath }}'
+              }
+            displayName: Generate emitter-package.json and emitter-package-lock files
+            workingDirectory: $(Build.SourcesDirectory)
+
+          - template: /eng/common/pipelines/templates/steps/publish-1es-artifact.yml
+            parameters:
+              artifactName: publish_artifacts
+              artifactPath: $(Build.ArtifactStagingDirectory)
+
     # Regenerate stage
     # Responsible for regenerating the SDK code using the emitter package and the generation matrix.
     - ${{ if and(parameters.ShouldPublish, parameters.ShouldRegenerate) }}:
@@ -213,7 +246,7 @@ extends:
         - Publish
         variables:
           pullRequestTargetBranch: 'main'
-          buildArtifactsPath: $(Pipeline.Workspace)/build_artifacts
+          publishArtifactsPath: $(Pipeline.Workspace)/publish_artifacts
           branchName: $[stageDependencies.Build.Build.outputs['set_branch_name.branchName']]
         pool: ${{ parameters.Pool }}
         jobs:
@@ -229,27 +262,9 @@ extends:
             displayName: Download pipeline artifacts
 
           - pwsh: |
-              npm install -g @azure-tools/typespec-client-generator-cli@latest
-            displayName: Install tsp-client
-
-          - pwsh: |
-              Write-Host "Overrides location: $(buildArtifactsPath)/packages/overrides.json"
-
-              if (Test-Path -Path '$(buildArtifactsPath)/packages/overrides.json') {
-                Write-Host "Using overrides.json to generate emitter-package.json"
-                tsp-client generate-config-files `
-                --package-json '$(buildArtifactsPath)/lock-files/package.json' `
-                --emitter-package-json-path '${{ parameters.EmitterPackageJsonOutputPath }}' `
-                --overrides '$(buildArtifactsPath)/packages/overrides.json'
-              } else {
-                Write-Host "No overrides.json found. Running tsp-client without overrides."
-                
-                tsp-client generate-config-files `
-                --package-json '$(buildArtifactsPath)/lock-files/package.json' `
-                --emitter-package-json-path '${{ parameters.EmitterPackageJsonOutputPath }}'
-              }
-            displayName: Generate emitter-package.json and emitter-package-lock files
-            workingDirectory: $(Build.SourcesDirectory)
+              Write-Host "Copying *emitter-package*.json to $(Build.SourcesDirectory)/eng"
+              Copy-Item $(publishArtifactsPath)/*emitter-package*.json $(Build.SourcesDirectory)/eng/ -Force
+            displayName: Copy emitter-package json files
 
           - ${{ parameters.InitializationSteps }}
 
@@ -326,7 +341,7 @@ extends:
           - Generate
           variables:
             generateJobResult: $[dependencies.Generate.result]
-            emitterVersion: $[stageDependencies.Build.Build.outputs['initialize.emitterVersion']]
+            emitterVersion: $[stageDependencies.Build.Build.outputs['ci_build.emitterVersion']]
           steps:
           - template: /eng/common/pipelines/templates/steps/sparse-checkout.yml
 
@@ -386,16 +401,6 @@ extends:
               } else {
                 Write-Error "Build.Repository.Name not in the expected {Owner}/{Name} format"
               }
-
-              $openAsDraft = -not ($reason -eq 'IndividualCI' -and $sourceBranch -eq 'refs/heads/main')
-              Write-Host "Setting OpenAsDraftBool = $openAsDraft"
-              Write-Host "##vso[task.setvariable variable=OpenAsDraft]$openAsDraft"
-              if ($openAsDraft) {
-                Write-Host "##vso[task.setvariable variable=PRLabels]Do Not Merge"
-              } else {
-                Write-Host "##vso[task.setvariable variable=PRLabels]"
-              }
-              
             displayName: Get PR title and body
 
           - task: PowerShell@2
@@ -412,8 +417,8 @@ extends:
                 -AuthToken '$(azuresdk-github-pat)'
                 -PRTitle '$(PullRequestTitle)'
                 -PRBody '$(PullRequestBody)'
-                -OpenAsDraft $$(OpenAsDraft)
-                -PRLabels '$(PRLabels)'
+                -OpenAsDraft $true
+                -PRLabels 'Do Not Merge'
               workingDirectory: $(Build.SourcesDirectory)
 
     # Test stage
