--- a/eng/packages/http-client-csharp/ci.yml
+++ b/eng/packages/http-client-csharp/ci.yml
@@ -68,5 +68,5 @@ extends:
       OnlyGenerateTypespec: true
     TestMatrix:
       All:
-        TestArguments: -UnitTests -GenerationChecks -Filter .NET
+        TestArguments: -UnitTests -GenerationChecks -EmitterPackagePath eng/packages/http-client-csharp -Filter .NET
         SpectorName: "http-client-csharp"
