--- a/eng/packages/http-client-csharp-mgmt/ci.yml
+++ b/eng/packages/http-client-csharp-mgmt/ci.yml
@@ -70,5 +70,5 @@ extends:
       OnlyGenerateTypespec: true
     TestMatrix:
       All:
-        TestArguments: -UnitTests -GenerationChecks -EmitterPackagePath eng/packages/http-client-csharp-mgmt -Filter .NET
+        TestArguments: -UnitTests -GenerationChecks -Filter .NET
         SpectorName: "http-client-csharp-mgmt"
