--- a/sdk/ai/Azure.AI.Projects.OneDP/src/Azure.AI.Projects.OneDP.csproj
+++ b/sdk/ai/Azure.AI.Projects.OneDP/src/Azure.AI.Projects.OneDP.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Azure.Core" />
     <PackageReference Include="System.ClientModel" VersionOverride="1.4.0-beta.1" />
     <PackageReference Include="Azure.Identity" />
+    <PackageReference Include="Azure.Storage.Blobs" />
     <PackageReference Include="System.Text.Json" />
   </ItemGroup>
 
