--- a/sdk/identity/ci.yml
+++ b/sdk/identity/ci.yml
@@ -35,3 +35,5 @@ extends:
     AOTTestInputs:
     - ArtifactName: Azure.Identity
       ExpectedWarningsFilepath: None
+    - ArtifactName: Azure.Identity.Broker
+      ExpectedWarningsFilepath: None
