we don't have a problem with this overidentifying the packages that are changed, but I want to make certain the automation gets this exclude path

--- a/sdk/pullrequest.yml
+++ b/sdk/pullrequest.yml
@@ -24,3 +24,5 @@ extends:
     ServiceDirectory: ${{ parameters.Service }}
     CheckAOTCompat: true
     BuildSnippets: true
+    ExcludePaths:
+      - eng/packages/http-client-csharp/
