--- a/sdk/identity/ci.yml
+++ b/sdk/identity/ci.yml
@@ -36,4 +36,4 @@ extends:
     - ArtifactName: Azure.Identity
       ExpectedWarningsFilepath: None
     - ArtifactName: Azure.Identity.Broker
-      ExpectedWarningsFilepath: None
+      ExpectedWarningsFilepath: "Azure.Identity.Broker/tests/compatibility/ExpectedWarnings.txt"
