--- a/eng/packages/http-client-csharp/generator/Azure.Generator/src/Properties/launchSettings.json
+++ b/eng/packages/http-client-csharp/generator/Azure.Generator/src/Properties/launchSettings.json
@@ -30,6 +30,11 @@
       "commandName": "Executable",
       "executablePath": "dotnet"
     },
+    "http-encode-bytes": {
+      "commandLineArgs": "$(SolutionDir)/../dist/generator/Microsoft.TypeSpec.Generator.dll $(SolutionDir)/TestProjects/Spector/http/encode/bytes -g AzureClientGenerator",
+      "commandName": "Executable",
+      "executablePath": "dotnet"
+    },
     "http-encode-numeric": {
       "commandLineArgs": "$(SolutionDir)/../dist/generator/Microsoft.TypeSpec.Generator.dll $(SolutionDir)/TestProjects/Spector/http/encode/numeric -g AzureClientGenerator",
       "commandName": "Executable",
