--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1116,6 +1116,7 @@
 
 # Add owners for emitter version changes
 /eng/http-client-csharp-emitter-package.json                       @JoshLove-msft @m-nash @jorgerangel-msft @live1206 @ArcturusZhang @nisha-bhatia
+/eng/http-client-csharp-emitter-package-lock.json                  @JoshLove-msft @m-nash @jorgerangel-msft @live1206 @ArcturusZhang @nisha-bhatia
 
 # ######## Code Generation ########
 
