--- a/eng/packages/http-client-csharp/ci.yml
+++ b/eng/packages/http-client-csharp/ci.yml
@@ -35,6 +35,10 @@ parameters:
     displayName: "Regenerate clients"
     type: boolean
     default: false
+  - name: HasNugetPackages
+    displayName: "Has NuGet packages"
+    type: boolean
+    default: false
 
 variables:
   - template: /eng/pipelines/templates/variables/image.yml
@@ -53,6 +57,7 @@ extends:
       ${{ if eq(variables['Build.Reason'], 'Manual') }}:
         ShouldPublish: ${{ parameters.ShouldPublish }}
         ShouldRegenerate: ${{ parameters.ShouldRegenerate }}
+        HasNugetPackages: ${{ parameters.HasNugetPackages }}
         ${{ if startswith(variables['Build.SourceBranch'], 'refs/pull/') }}:  # PR ref's can't be published to public, even in a manual run
           PublishPublic: false
           PublishDependsOnTest: false
@@ -63,10 +68,23 @@ extends:
         ShouldPublish: true
         ShouldRegenerate: true
         PublishDependsOnTest: false
-        PublishPublic: ${{ and(eq(variables['Build.Reason'], 'IndividualCI'), eq(variables['Build.SourceBranch'], 'refs/heads/main')) }}
+        PublishPublic: false #${{ and(eq(variables['Build.Reason'], 'IndividualCI'), eq(variables['Build.SourceBranch'], 'refs/heads/main')) }}
+        HasNugetPackages: true
       RegenerationJobCount: 5
       MinimumPerJob: 10
       OnlyGenerateTypespec: true
+    AdditionalBuildSteps:
+      - task: PowerShell@2
+        displayName: "Build & Pack Azure.Generator"
+        name: build_pack_generator
+        inputs:
+          pwsh: true
+          filePath: eng/packages/http-client-csharp/eng/scripts/Build-Pack-Generator.ps1
+          arguments: >
+            -BuildNumber "$(Build.BuildNumber)"
+            -OutputDirectory "$(Build.ArtifactStagingDirectory)"
+            -GeneratorVersion: $(initialize.emitterVersion)
+          workingDirectory: $(Build.SourcesDirectory)
     TestMatrix:
       All:
         TestArguments: -UnitTests -GenerationChecks -Filter .NET
