--- a/eng/packages/http-client-csharp/package.json
+++ b/eng/packages/http-client-csharp/package.json
@@ -4,9 +4,10 @@
   "type": "module",
   "main": "dist/emitter/index.js",
   "exports": {
-    ".": "./dist/emitter/index.js"
-  },
-  "scripts": {
+    ".": {
+      "import": "./dist/emitter/index.js"
+    }
+  },"scripts": {
     "clean": "rimraf ./dist ./emitter/temp && dotnet clean ./generator",
     "build:emitter": "tsc -p ./emitter/tsconfig.build.json",
     "build:generator": "dotnet build ./generator",
@@ -17,7 +18,8 @@
     "lint": "eslint . --max-warnings=0",
     "lint:fix": "eslint . --fix",
     "prettier:fix": "prettier --write --config .prettierrc.json ./**/*.ts",
-    "prettier": "prettier --check --config .prettierrc.json ./**/*.ts"
+    "prettier": "prettier --check --config .prettierrc.json ./**/*.ts",
+    "regen-docs": "npm run build:emitter && tspd doc . --enable-experimental --skip-js"
   },
   "files": [
     "dist/**"
@@ -43,6 +45,7 @@
     "@typespec/rest": "0.68.0",
     "@typespec/spec-api": "0.1.0-alpha.3",
     "@typespec/spector": "0.1.0-alpha.11",
+    "@typespec/tspd": "0.68.0",
     "@typespec/versioning": "0.68.0",
     "@typespec/xml": "0.68.0",
     "@vitest/coverage-v8": "^3.0.5",
@@ -52,6 +55,8 @@
     "prettier": "~3.0.3",
     "rimraf": "~6.0.1",
     "typescript": "~5.6.3",
+    "typedoc": "^0.28.1",
+    "typedoc-plugin-markdown": "^4.5.2",
     "typescript-eslint": "^7.8.0",
     "vitest": "^3.0.5"
   },
