--- a/sdk/storagesync/Azure.ResourceManager.StorageSync/tests/Azure.ResourceManager.StorageSync.Tests.csproj
+++ b/sdk/storagesync/Azure.ResourceManager.StorageSync/tests/Azure.ResourceManager.StorageSync.Tests.csproj
@@ -1,4 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup>
+    <IsTestProject>true</IsTestProject>
+  </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\src\Azure.ResourceManager.StorageSync.csproj" />
   </ItemGroup>
