--- a/sdk/eventgrid/Azure.Messaging.EventGrid.Namespaces/src/Azure.Messaging.EventGrid.Namespaces.csproj
+++ b/sdk/eventgrid/Azure.Messaging.EventGrid.Namespaces/src/Azure.Messaging.EventGrid.Namespaces.csproj
@@ -9,16 +9,19 @@
     <TargetFrameworks>$(RequiredTargetFrameworks)</TargetFrameworks>
     <IncludeOperationsSharedSource>true</IncludeOperationsSharedSource>
     <DisableEnhancedAnalysis>true</DisableEnhancedAnalysis>
-  </PropertyGroup>
+      </PropertyGroup>
 
-  <ItemGroup>
+    <ItemGroup>
+    <Compile Include="$(AzureCoreSharedSources)AzureKeyCredentialPolicy.cs" LinkBase="Shared/Core" />
     <Compile Include="$(AzureCoreSharedSources)AzureResourceProviderNamespaceAttribute.cs" LinkBase="Shared/Core" />
-    <Compile Include="..\..\..\core\Azure.Core\src\Shared\AzureKeyCredentialPolicy.cs">
-      <Link>Shared\Core\AzureKeyCredentialPolicy.cs</Link>
-    </Compile>
   </ItemGroup>
 
+  <!-- Import EventGrid shared source -->
   <ItemGroup>
+    <Compile Include="$(AzureEventGridSharedSources)CloudEventRequestContent.cs" LinkBase="Shared/EventGrid" />
+  </ItemGroup>
+
+    <ItemGroup>
     <PackageReference Include="Azure.Core" />
   </ItemGroup>
 
