--- a/eng/packages/http-client-csharp-mgmt/package.json
+++ b/eng/packages/http-client-csharp-mgmt/package.json
@@ -1,6 +1,17 @@
 {
   "name": "@azure-typespec/http-client-csharp-mgmt",
   "version": "1.0.0",
+  "author": "Microsoft Corporation",
+  "description": "TypeSpec library for emitting Azure management libraries for C#.",
+  "readme": "https://github.com/Azure/azure-sdk-for-net/blob/main/eng/packages/http-client-csharp-mgmt/README.md",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/azure-sdk/azure-sdk-for-net.git"
+  },
+  "bugs": {
+    "url": "https://github.com/azure-sdk/azure-sdk-for-net/issues"
+  },
   "type": "module",
   "main": "dist/emitter/index.js",
   "exports": {
