--- a/eng/Packages.Data.props
+++ b/eng/Packages.Data.props
@@ -306,6 +306,7 @@
     <PackageReference Update="Azure.ResourceManager" Version="1.13.0" />
     <PackageReference Update="Azure.ResourceManager.Compute" Version="1.7.0-beta.1" />
     <PackageReference Update="Azure.ResourceManager.CognitiveServices" Version="1.3.0" />
+    <PackageReference Update="Azure.ResourceManager.ContainerService" Version="1.2.3" />
     <PackageReference Update="Azure.ResourceManager.KeyVault" Version="1.3.2" />
     <PackageReference Update="Azure.ResourceManager.ManagedServiceIdentities" Version="1.2.3" />
     <PackageReference Update="Azure.ResourceManager.Network" Version="1.10.0" />
